--- a/src/app/modules/challenges/components/challenge-results-card/challenge-results-card.component.scss
+++ b/src/app/modules/challenges/components/challenge-results-card/challenge-results-card.component.scss
@@ -1,6 +1,6 @@
 .bg-challenge-results {
   background: #141E30;
-  background: linear-gradient(to right, #243B55, #141E30);
+  background: var(--bg-gradient);
   border: none;
   border-radius: 10px;
 }
