--- a/src/app/modules/challenges/pages/challenge/challenge.component.scss
+++ b/src/app/modules/challenges/pages/challenge/challenge.component.scss
@@ -1,6 +1,4 @@
 .countdown {
-  background-image: linear-gradient(to right, #2b5876 0%, #4e4376 51%, #2b5876 100%);
-
   .clock-val {
     font-size: 35px;
   }
@@ -17,15 +15,15 @@
 
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-      -moz-user-select: none; /* Old versions of Firefox */
-      -ms-user-select: none; /* Internet Explorer/Edge */
-          user-select: none; /* Non-prefixed version, currently
-                                supported by Chrome, Edge, Opera and Firefox */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
+                                 supported by Chrome, Edge, Opera and Firefox */
 }
 
-
-.badge-result { 
+.badge-result {
   width: 40px !important;
   border-radius: 20px !important;
   height: 40px !important;
