--- a/src/app/modules/home/news-section/news-section.component.html
+++ b/src/app/modules/home/news-section/news-section.component.html
@@ -1,11 +1,22 @@
-<h3 class="ml-1 mb-2 font-weight-bolder">{{ 'LatestNews' | translate }} </h3>
-<swiper [config]="newsSwiperConfig" class="swiper swiper-lazy-loading" #newsSwiper>
-  <div class="swiper-wrapper">
-    <div [@fadeInRightOnEnter] class="swiper-slide" *ngFor="let news of lastNews">
-      <news-card [blog]="news.blog"></news-card>
-      <hr>
-    </div>
+<div class="news-section">
+  <h3 class="ml-1 mb-2 font-weight-bolder">{{ 'LatestNews' | translate }} </h3>
+  <div class="item" *ngIf="skeletonVisible">
+    <ngx-skeleton-loader
+      count="3"
+      animation="pulse"
+      appearance="line"
+      [theme]="{height: '150px', 'margin-top': '15px', 'margin-bottom': '30px', background: 'var(--skeleton-color)'}"
+    ></ngx-skeleton-loader>
   </div>
-  <!-- Add Pagination -->
-  <div class="swiper-pagination"></div>
-</swiper>
+
+  <swiper *ngIf="!skeletonVisible" [config]="newsSwiperConfig" class="swiper swiper-lazy-loading" #newsSwiper>
+    <div class="swiper-wrapper">
+      <div [@fadeInRightOnEnter] class="swiper-slide" *ngFor="let news of lastNews">
+        <news-card [blog]="news.blog"></news-card>
+        <hr>
+      </div>
+    </div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+  </swiper>
+</div>
