contests table change datetime color

--- a/src/app/modules/contests/components/contests-table/contests-table.component.html
+++ b/src/app/modules/contests/components/contests-table/contests-table.component.html
@@ -40,13 +40,13 @@
           </div>
         </td>
 
-        <td class="text-center text-primary">
+        <td class="text-center text-dark">
           <u>{{ contest.startTime | date:'y/MM/dd'}}</u>
           <br>
           <u>{{ contest.startTime | date:'H:mm'}}</u>
         </td>
 
-        <td class="text-center text-primary">
+        <td class="text-center text-dark">
           <u>{{ contest.finishTime | date:'y/MM/dd'}}</u>
           <br>
           <u>{{ contest.finishTime | date:'H:mm'}}</u>
