--- a/src/app/modules/challenges/components/challenge-results-card/challenge-results-card.component.scss
+++ b/src/app/modules/challenges/components/challenge-results-card/challenge-results-card.component.scss
@@ -2,6 +2,12 @@
   background: var(--bg-gradient);
   border: none;
   border-radius: 10px;
+
+  ::ng-deep {
+    .text-blue, .text-primary {
+      color: #ffffff !important;
+    }
+  }
 }
 
 td:nth-child(1) {
