--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -12,7 +12,7 @@
     <profile-section></profile-section>
   </div>
 
-  <div class="col-12">
+  <div class="col-12 mt-1">
     <div class="row">
       <div [ngClass]="{
             'col-lg-4 col-md-12 col-sm-12 order-1': !isMenuToggled || isMenuCollapsed,
