refactoring html problems && add new templates for 1843 & 1842

--- a/src/app/modules/problems/components/problem-body/problem-body.component.html
+++ b/src/app/modules/problems/components/problem-body/problem-body.component.html
@@ -26,6 +26,10 @@
 <problem1742 [problem]="problem" *ngIf="problem.id == 1742"></problem1742>
 <problem1743 [problem]="problem" *ngIf="problem.id == 1743"></problem1743>
 <problem1744 [problem]="problem" *ngIf="problem.id == 1744"></problem1744>
+<problem1840 [problem]="problem" *ngIf="problem.id == 1840"></problem1840>
+<problem1841 [problem]="problem" *ngIf="problem.id == 1841"></problem1841>
+<problem1842 *ngIf="problem.id == 1842"></problem1842>
+<problem1843 *ngIf="problem.id == 1843"></problem1843>
 
 <hr>
 
