--- a/src/app/modules/problems/pages/problem/problem-description/problem-description.component.html
+++ b/src/app/modules/problems/pages/problem/problem-description/problem-description.component.html
@@ -4,66 +4,67 @@
       {{ problem.id }}. {{ problem.title }}
     </h3>
   </div>
-  
+
   <problem-body [problem]="problem"></problem-body>
 
-  <ngb-accordion [destroyOnHide]="false" [closeOthers]="false">
-    <ngb-panel id="panelMargin1" [cardClass]="'collapse-margin'">
+  <ngb-accordion [closeOthers]="false" [destroyOnHide]="false">
+    <ngb-panel [cardClass]="'collapse-margin'" id="panelMargin1">
       <ng-template ngbPanelTitle>
         <span>{{ 'Tags' | translate }}</span>
       </ng-template>
       <ng-template ngbPanelContent>
-        <div *ngIf="currentUser?.isSuperuser || currentUser?.permissions.canChangeProblemTags && problem.hasSolved else elseBlock">
+        <div
+          *ngIf="currentUser?.isSuperuser || currentUser?.permissions.canChangeProblemTags && problem.hasSolved else elseBlock">
           <button
-            *ngFor="let tag of problem.tags"
             (click)="removeTag(tag)"
+            *ngFor="let tag of problem.tags"
             class="btn mb-2 mr-50 btn-relief-primary btn-sm">
             {{ tag.name }} <i data-feather="x"></i>
           </button>
 
           <ng-select
-            appendTo="body"  
-            [items]="tags"
-            bindValue="id"
-            bindLabel="name"
+            [(ngModel)]="selectedTag"
             [dropdownPosition]="'bottom'"
-            [(ngModel)]="selectedTag">
+            [items]="tags"
+            appendTo="body"
+            bindLabel="name"
+            bindValue="id">
           </ng-select>
 
-          <button class="mt-2 btn btn-relief-primary btn-sm" (click)="addTag()">{{ 'Add' | translate }}</button>
+          <button (click)="addTag()" class="mt-2 btn btn-relief-primary btn-sm">{{ 'Add' | translate }}</button>
         </div>
 
         <ng-template #elseBlock>
-          <span class="badge badge-pill badge-primary" *ngFor="let tag of problem.tags">
+          <span *ngFor="let tag of problem.tags" class="badge badge-pill badge-primary">
             {{ tag.name }}
           </span>
         </ng-template>
       </ng-template>
     </ngb-panel>
 
-    <ngb-panel id="panelMargin2" [cardClass]="'collapse-margin'">
+    <ngb-panel [cardClass]="'collapse-margin'" id="panelMargin2">
       <ng-template ngbPanelTitle>
         <span>{{ 'Topics' | translate }}</span>
       </ng-template>
       <ng-template ngbPanelContent>
         <div *ngIf="currentUser?.isSuperuser else elseBlock">
           <button
-            *ngFor="let topic of problem.topics"
             (click)="removeTopic(topic)"
+            *ngFor="let topic of problem.topics"
             class="btn mb-2 mr-50 btn-relief-primary btn-sm">
             {{ topic.name }} <i data-feather="x"></i>
           </button>
 
           <ng-select
-            appendTo="body"  
-            [items]="topics"
-            bindValue="id"
-            bindLabel="name"
+            [(ngModel)]="selectedTopic"
             [dropdownPosition]="'bottom'"
-            [(ngModel)]="selectedTopic">
+            [items]="topics"
+            appendTo="body"
+            bindLabel="name"
+            bindValue="id">
           </ng-select>
 
-          <button class="mt-2 btn btn-relief-primary btn-sm" (click)="addTopic()">
+          <button (click)="addTopic()" class="mt-2 btn btn-relief-primary btn-sm">
             {{ 'Add' | translate }}
           </button>
         </div>
@@ -78,21 +79,21 @@
       </ng-template>
     </ngb-panel>
 
-    <ngb-panel *ngIf="currentUser && problem.hasSolution" id="panelMargin3" [cardClass]="'collapse-margin'">
+    <ngb-panel *ngIf="currentUser && problem.hasSolution" [cardClass]="'collapse-margin'" id="panelMargin3">
       <ng-template ngbPanelTitle>
         <span>{{ 'Solution' | translate }}</span>
       </ng-template>
       <ng-template ngbPanelContent>
         <div *ngIf="problem.userInfo.canViewSolution else elseBlock;">
-          <button class="btn btn-sm btn-relief-primary" (click)="openSolutionModal(solution)">
+          <button (click)="openSolutionModal(solution)" class="btn btn-sm btn-relief-primary">
             {{ 'View' | translate }}
           </button>
         </div>
         <ng-template #elseBlock>
           <kepcoin-spend-swal
-            [value]="problem.solutionKepcoinValue"
+            (success)="onPurchaseSolution()"
             [purchaseUrl]="'problems/' + problem.id + '/purchase-solution/'"
-            (success)="problem.canViewSolution=true;">
+            [value]="problem.solutionKepcoinValue">
           </kepcoin-spend-swal>
         </ng-template>
       </ng-template>
@@ -102,28 +103,21 @@
 </div>
 
 <ng-template #solution let-modal>
-	<div class="modal-header" *ngIf="problem.hasSolution">
-		<h4 class="modal-title">{{ 'Solution' | translate }}</h4>
-	</div>
-	<div class="modal-body">
-    {{ problemSolution.solution }}
-    <ul ngbNav #nav="ngbNav" class="nav-tabs">
-      <li [ngbNavItem]="1" *ngIf="problemSolution.codeCpp">
-        <a ngbNavLink>C++</a>
+  <div *ngIf="problem.hasSolution" class="modal-header">
+    <h4 class="modal-title">{{ 'Solution' | translate }}</h4>
+  </div>
+  <div class="modal-body">
+    <div [innerHTML]="problemSolution.solution"></div>
+    <ul #nav="ngbNav" class="nav-tabs" ngbNav>
+      <li *ngFor="let code of problemSolution.codes; let i = index" [ngbNavItem]="i+1">
+        <a ngbNavLink>{{ code.lang }}</a>
         <ng-template ngbNavContent>
-          <clipboard-button [text]="problemSolution.codeCpp"></clipboard-button>
-          <pre>{{ problemSolution.codeCpp }}</pre>
-        </ng-template>
-      </li>
-      <li [ngbNavItem]="2" *ngIf="problemSolution.codePy">
-        <a ngbNavLink>Python</a>
-        <ng-template ngbNavContent>
-          <clipboard-button [text]="problemSolution.codePy"></clipboard-button>
-          <pre>{{ problemSolution.codePy }}</pre>
+          <clipboard-button [text]="code.code"></clipboard-button>
+          <div class="mb-1"></div>
+          <monaco-editor [(ngModel)]="code.code" [lang]="code.lang"></monaco-editor>
         </ng-template>
       </li>
     </ul>
-
     <div [ngbNavOutlet]="nav" class="mt-2"></div>
-	</div>
+  </div>
 </ng-template>
