--- a/src/app/modules/arena/arena-tournament/arena-tournament.component.html
+++ b/src/app/modules/arena/arena-tournament/arena-tournament.component.html
@@ -168,7 +168,7 @@
             (pageChange)="updateArenaPlayers()">
           </pagination>
 
-          <div class="col-12" *ngIf="arena.status != 1">
+          <div class="col-12">
             <div class="row">
               <div class="col-lg-6 col-md-6 col-12" *ngFor="let challenge of arenaChallenges">
                 <div class="table-responsive challenge-results mb-1">
@@ -209,6 +209,19 @@
                 </div>
               </div>    
             </div>
+          </div>
+
+          <div class="mb-2">
+            <pagination
+              *ngIf="total > 0"
+              [collectionSize]="total"
+              [(page)]="pageNumber"
+              [pageSize]="10"
+              [maxSize]="5"
+              [rotate]="true"
+              [color]="'warning'"
+              (pageChange)="updateArenaPlayers()">
+            </pagination>
           </div>
 
         </div>
