new primary color & new brand logo | experimental

--- a/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
+++ b/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
@@ -4,10 +4,9 @@
     <li class="nav-item mr-auto">
       <!-- App Branding -->
       <a class="navbar-brand" [routerLink]="['/']">
-        <span class="brand-logo">
-          <img src="{{ coreConfig.app.appLogoImage }}" alt="brand-logo" />
+        <span class="brand-logo mb-2">
+          <img style="max-width: 180px !important;" src="{{ coreConfig.app.appLogoImageWithTitle }}" alt="brand-logo" width="180" />
         </span>
-        <h2 class="brand-text mb-0">{{ coreConfig.app.appName }}</h2>
       </a>
     </li>
 
