--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -4,9 +4,9 @@
     <li class="nav-item">
       <a class="navbar-brand" [routerLink]="['/']">
         <span class="brand-logo">
-          <img src="{{ coreConfig.app.appLogoImage }}" alt="brand-logo" width="36" />
+          <img style="max-width: 200px !important;" src="{{ coreConfig.app.appLogoImageWithTitle }}" alt="brand-logo" width="200" />
         </span>
-        <h2 class="brand-text mb-0">{{ coreConfig.app.appName }}</h2>
+<!--        <h2 class="brand-text mb-0">{{ coreConfig.app.appName }}</h2>-->
       </a>
     </li>
   </ul>
