--- a/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
@@ -69,7 +69,7 @@
         <i [data-feather]="'problem' | iconName"></i>
         {{ contest.problemsCount }}
       </span>
-      <span class="badge badge-glow badge-{{ contest.getBadgeType() }}">
+      <span class="badge badge-glow badge-primary">
         {{ contest.type }}
       </span>
     </div>
