--- a/src/app/modules/contests/components/contest-problem-card/contest-problem-card.component.html
+++ b/src/app/modules/contests/components/contest-problem-card/contest-problem-card.component.html
@@ -29,7 +29,7 @@
 
         <span class="text-white ml-50" (mouseenter)="onProblemFocus()">
           {{ contestProblem.symbol }}. {{ contestProblem.problem.title }}
-          <span *ngIf="contestProblem.ball > 1">
+          <span *ngIf="contest.hasBalls()">
             ({{ contestProblem.ball }})
           </span>
         </span>
