--- a/src/app/modules/contests/pages/contest/contest-og-image/contest-og-image.component.html
+++ b/src/app/modules/contests/pages/contest/contest-og-image/contest-og-image.component.html
@@ -35,7 +35,7 @@
           <i [data-feather]="'problem' | iconName"></i>
           {{ contest.problemsCount }}
         </span>
-        <span class="ml-25 badge badge-glow badge-{{ contest.getBadgeType() }}">
+        <span class="ml-25 badge badge-glow badge-primary">
           {{ contest.type }}
         </span>
       </div>
