--- a/src/app/modules/problems/components/problem-body/html-problem-body/html-problem-body.component.html
+++ b/src/app/modules/problems/components/problem-body/html-problem-body/html-problem-body.component.html
@@ -2,6 +2,7 @@
   (ngModelChange)="change()"
   [(ngModel)]="html"
   [height]="400"
+  [lang]="AttemptLangs.HTML"
   [tabSize]="2">
 </monaco-editor>
 
