--- a/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
+++ b/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
@@ -5,7 +5,7 @@
       <!-- App Branding -->
       <a class="navbar-brand" [routerLink]="['/']">
         <span class="brand-logo mb-2">
-          <img style="max-width: 180px !important;" src="{{ coreConfig.app.appLogoImageWithTitle }}" alt="brand-logo" width="180" />
+          <img style="max-width: 180px !important;" src="assets/images/logo/logo-with-title.svg" alt="brand-logo" width="180" />
         </span>
       </a>
     </li>
