--- a/src/app/modules/contests/pages/contests/contests.component.scss
+++ b/src/app/modules/contests/pages/contests/contests.component.scss
@@ -1,6 +1,6 @@
-@import 'bootstrap/scss/mixins';
-@import 'bootstrap/scss/functions';
 @import '@core/scss/base/bootstrap-extended/variables';
+@import 'bootstrap/scss/mixins/dark-layout';
+@import 'bootstrap/scss/mixins/breakpoints';
 
 section.contests {
   --box-shadow: 0 4px 24px 0 rgba(34, 41, 47, 0.1);
@@ -17,7 +17,7 @@ section.contests {
   box-shadow: var(--box-shadow) !important;
   background: inherit !important;
   background-image: linear-gradient(rgba(0,0,0,var(--bg-filter-opacity)),rgba(0,0,0,var(--bg-filter-opacity))), var(--bg-img) !important;
-  
+
   &:hover {
     transform: scale(1.05);
   }
@@ -51,16 +51,14 @@ section.contests {
   z-index: -1;
   background: linear-gradient(to right, $primary, lighten($primary, 10%));
 
+  @include dark-layout {
+    background: linear-gradient(to right, mix(black, $primary, 50), mix(black, $primary, 15));
+  }
+
   @include media-breakpoint-down(lg) {
     width: calc(100% + 1.2rem);
   }
 }
-
-::ng-deep .dark-layout {
- .contests-page-top:before {
-   background: linear-gradient(to right, mix(black, $primary, 50), mix(black, $primary, 15));
-  }
-}  
 
 .card.filter {
   border: none;
