--- a/src/app/modules/problems/pages/problems/sections/section-problems-filter/section-problems-filter.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-filter/section-problems-filter.component.html
@@ -1,213 +1,165 @@
 <div class="card">
   <div class="card-body">
-    <div class="row">
-      <div class="col-6" [ngClass]="{
-        'col-lg-3': currentUser,
-        'col-lg-4': !currentUser
-      }">
-        <div class="form-group">
-          <label class="text-primary" for="first-name-vertical">
+    <form [formGroup]="filterForm">
+      <div class="row">
+        <div class="col-6 col-lg-3">
+          <div class="form-group">
+            <label class="text-primary">
+              <strong>
+                {{ 'TITLE' | translate }}:
+              </strong>
+            </label>
+            <input
+              formControlName="title"
+              class="form-control"
+              name="title"
+              type="text"
+            />
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-3">
+          <label class="text-primary">
             <strong>
-              {{ 'TITLE' | translate }}:
+              {{ 'TAGS' | translate }}:
             </strong>
           </label>
-          <input
-            type="text"
-            class="form-control"
-            name="title"
-            (ngModelChange)="reload()"
-            [(ngModel)]="filter.title"
-          />
+          <div class="form-group">
+            <ng-select
+              formControlName="tags"
+              [multiple]="true"
+              placeholder="{{ 'SELECT' | translate }}:"
+              [compareWith]="compareEqual"
+            >
+              <ng-option *ngFor="let tag of tags" [value]="tag.id">{{ tag.name }}</ng-option>
+            </ng-select>
+          </div>
         </div>
-      </div>
 
-      <div class="col-6" [ngClass]="{
-        'col-lg-3': currentUser,
-        'col-lg-4': !currentUser
-      }">
-        <label class="text-primary">
-          <strong>
-            {{ 'TAGS' | translate }}:
-          </strong>
-        </label>
-        <div class="form-group">
-          <ng-select
-            [multiple]="true"
-            placeholder="{{ 'SELECT' | translate }}:"
-            (change)="reload()"
-            [(ngModel)]="filter.tags"
-            [ngModelOptions]="{standalone: true}"
-          >
-            <ng-option *ngFor="let tag of tags" [value]="tag.id">{{ tag.name }}</ng-option>
-          </ng-select>
-        </div>
-      </div>
-
-      <div class="col-6" [ngClass]="{
-        'col-lg-3': currentUser,
-        'col-lg-4': !currentUser
-      }">
-        <label class="text-primary">
-          <strong>
-            {{ 'DIFFICULTY' | translate }}:
-          </strong>
-        </label>
-        <div class="form-group">
-          <ng-select
-            (change)="reload()"
-            [(ngModel)]="filter.difficulty"
-            [ngModelOptions]="{standalone: true}"
-          >
-            <ng-option *ngFor="let item of difficulties" [value]="item.value">
+        <div class="col-6 col-lg-3">
+          <label class="text-primary">
+            <strong>
+              {{ 'DIFFICULTY' | translate }}:
+            </strong>
+          </label>
+          <div class="form-group">
+            <ng-select formControlName="difficulty" [compareWith]="compareEqual">
+              <ng-option *ngFor="let item of difficulties" [value]="item.value">
                 <span class="text-{{ item.value | problemDifficultyColor }}">
                   {{ item.name }}
                 </span>
-            </ng-option>
-          </ng-select>
+              </ng-option>
+            </ng-select>
+          </div>
         </div>
+
+        <div class="col-lg-3 col-6">
+          <label class="text-primary">
+            <strong>
+              {{ 'STATUS' | translate }}:
+            </strong>
+          </label>
+          <div class="form-group">
+            <ng-select formControlName="status" [compareWith]="compareEqual">
+              <ng-option [value]="3">
+                <i [data-feather]="'minus'" class="text-warning"></i>
+                {{ 'Unknown' | translate }}
+              </ng-option>
+              <ng-option [value]="1">
+                <i [data-feather]="'exists' | iconName" class="text-success"></i>
+                {{ 'Solved' | translate }}
+              </ng-option>
+              <ng-option [value]="2">
+                <i [data-feather]="'not_exists' | iconName" class="text-danger"></i>
+                {{ 'Unsolved' | translate }}
+              </ng-option>
+            </ng-select>
+          </div>
+        </div>
+
       </div>
 
-      <div class="col-lg-3 col-6" *ngIf="currentUser">
-        <label class="text-primary">
-          <strong>
-            {{ 'STATUS' | translate }}:
-          </strong>
-        </label>
-        <div class="form-group">
-          <ng-select
-            (change)="reload()"
-            [(ngModel)]="filter.status"
-            [ngModelOptions]="{standalone: true}"
-          >
-            <ng-option [value]="3">
-              <i class="text-warning" [data-feather]="'minus'"></i>
-              {{ 'Unknown' | translate }}
-            </ng-option>
-            <ng-option [value]="1">
-              <i class="text-success" [data-feather]="'exists' | iconName"></i>
-              {{ 'Solved' | translate }}
-            </ng-option>
-            <ng-option [value]="2">
-              <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
-              {{ 'Unsolved' | translate }}
-            </ng-option>
-          </ng-select>
+      <div class="row">
+        <div class="col-lg-3 col-6">
+          <label class="text-primary">
+            <strong>
+              {{ 'Checker' | translate }}:
+            </strong>
+          </label>
+          <div class="form-group">
+            <ng-select formControlName="hasChecker" [compareWith]="compareEqual">
+              <ng-option [value]="true">
+                <i [data-feather]="'exists' | iconName" class="text-success"></i>
+                {{ 'Yes' | translate }}
+              </ng-option>
+              <ng-option [value]="false">
+                <i [data-feather]="'not_exists' | iconName" class="text-danger"></i>
+                {{ 'No' | translate }}
+              </ng-option>
+            </ng-select>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-6">
+          <label class="text-primary">
+            <strong>
+              {{ 'CheckInput' | translate }}:
+            </strong>
+          </label>
+          <div class="form-group">
+            <ng-select formControlName="hasCheckInput" [compareWith]="compareEqual">
+              <ng-option [value]="true">
+                <i [data-feather]="'exists' | iconName" class="text-success"></i>
+                {{ 'Yes' | translate }}
+              </ng-option>
+              <ng-option [value]="false">
+                <i [data-feather]="'not_exists' | iconName" class="text-danger"></i>
+                {{ 'No' | translate }}
+              </ng-option>
+            </ng-select>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-6">
+          <label class="text-primary">
+            <strong>
+              {{ 'Solution' | translate }}:
+            </strong>
+          </label>
+          <div class="form-group">
+            <ng-select formControlName="hasSolution" [compareWith]="compareEqual">
+              <ng-option [value]="true">
+                <i [data-feather]="'exists' | iconName" class="text-success"></i>
+                {{ 'Yes' | translate }}
+              </ng-option>
+              <ng-option [value]="false">
+                <i [data-feather]="'not_exists' | iconName" class="text-danger"></i>
+                {{ 'No' | translate }}
+              </ng-option>
+            </ng-select>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-6">
+          <label class="text-primary">
+            <strong>
+              {{ 'PartialSolvable' | translate }}:
+            </strong>
+          </label>
+          <div class="form-group">
+            <ng-select formControlName="partialSolvable" [compareWith]="compareEqual">
+              <ng-option [value]="true">
+                <i [data-feather]="'exists' | iconName" class="text-success"></i>
+                {{ 'Yes' | translate }}
+              </ng-option>
+              <ng-option [value]="false">
+                <i [data-feather]="'not_exists' | iconName" class="text-danger"></i>
+                {{ 'No' | translate }}
+              </ng-option>
+            </ng-select>
+          </div>
         </div>
       </div>
-
-    </div>
-
-    <div class="row">
-      <div class="col-lg-3 col-6">
-        <label class="text-primary">
-          <strong>
-            {{ 'Checker' | translate }}:
-          </strong>
-        </label>
-        <div class="form-group">
-          <ng-select
-            (change)="reload()"
-            [(ngModel)]="filter.hasChecker"
-            [ngModelOptions]="{standalone: true}"
-            [clearable]="false"
-          >
-            <ng-option [value]="null">
-            </ng-option>
-            <ng-option [value]="true">
-              <i class="text-success" [data-feather]="'exists' | iconName"></i>
-              {{ 'Yes' | translate }}
-            </ng-option>
-            <ng-option [value]="false">
-              <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
-              {{ 'No' | translate }}
-            </ng-option>
-          </ng-select>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-6">
-        <label class="text-primary">
-          <strong>
-            {{ 'CheckInput' | translate }}:
-          </strong>
-        </label>
-        <div class="form-group">
-          <ng-select
-            (change)="reload()"
-            [(ngModel)]="filter.hasCheckInput"
-            [ngModelOptions]="{standalone: true}"
-            [clearable]="false"
-          >
-            <ng-option [value]="null">
-            </ng-option>
-            <ng-option [value]="true">
-              <i class="text-success" [data-feather]="'exists' | iconName"></i>
-              {{ 'Yes' | translate }}
-            </ng-option>
-            <ng-option [value]="false">
-              <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
-              {{ 'No' | translate }}
-            </ng-option>
-          </ng-select>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-6">
-        <label class="text-primary">
-          <strong>
-            {{ 'Solution' | translate }}:
-          </strong>
-        </label>
-        <div class="form-group">
-          <ng-select
-            (change)="reload()"
-            [(ngModel)]="filter.hasSolution"
-            [ngModelOptions]="{standalone: true}"
-            [clearable]="false"
-          >
-            <ng-option [value]="null">
-            </ng-option>
-            <ng-option [value]="true">
-              <i class="text-success" [data-feather]="'exists' | iconName"></i>
-              {{ 'Yes' | translate }}
-            </ng-option>
-            <ng-option [value]="false">
-              <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
-              {{ 'No' | translate }}
-            </ng-option>
-          </ng-select>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-6">
-        <label class="text-primary">
-          <strong>
-            {{ 'PartialSolvable' | translate }}:
-          </strong>
-        </label>
-        <div class="form-group">
-          <ng-select
-            (change)="reload()"
-            [(ngModel)]="filter.partialSolvable"
-            [ngModelOptions]="{standalone: true}"
-            [clearable]="false"
-          >
-            <ng-option [value]="null">
-            </ng-option>
-            <ng-option [value]="true">
-              <i class="text-success" [data-feather]="'exists' | iconName"></i>
-              {{ 'Yes' | translate }}
-            </ng-option>
-            <ng-option [value]="false">
-              <i class="text-danger" [data-feather]="'not_exists' | iconName"></i>
-              {{ 'No' | translate }}
-            </ng-option>
-          </ng-select>
-        </div>
-      </div>
-
-    </div>
-
-
+    </form>
   </div>
 </div>
