--- a/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
@@ -9,8 +9,10 @@
               [justifyContent]="'start'"
               [ordering]="'id'"
               (change)="changeOrdering($event)">
-              <i class="mr-50" [data-feather]="'problem' | iconName"></i>
-              ID
+              <div class="align-middle">
+                <i class="mr-50" [data-feather]="'problem' | iconName"></i>
+                ID
+              </div>
             </table-ordering>
           </th>
           <th>
@@ -19,8 +21,10 @@
               [justifyContent]="'start'"
               [ordering]="'title'"
               (change)="changeOrdering($event)">
-              <i class="mr-50" [data-feather]="'edit-3'"></i>
-              {{ 'TITLE' | translate }}
+              <div class="align-middle">
+                <i class="mr-50" [data-feather]="'edit-3'"></i>
+                {{ 'TITLE' | translate }}
+              </div>
             </table-ordering>
           </th>
           <th>
@@ -33,8 +37,10 @@
               [justifyContent]="'center'"
               [ordering]="'difficulty'"
               (change)="changeOrdering($event)">
-              <i class="mr-50" [data-feather]="'bar-chart'"></i>
-              {{ 'DIFFICULTY' | translate }}
+              <div class="align-middle">
+                <i class="mr-50" [data-feather]="'bar-chart'"></i>
+                {{ 'DIFFICULTY' | translate }}
+              </div>
             </table-ordering>
           </th>
           <th class="text-center">
@@ -43,8 +49,10 @@
               [justifyContent]="'center'"
               [ordering]="'rating'"
               (change)="changeOrdering($event)">
-              <i class="mr-50" [data-feather]="'star'"></i>
-              {{ 'RATING' | translate }}
+              <div class="align-middle">
+                <i class="mr-50" [data-feather]="'star'"></i>
+                {{ 'RATING' | translate }}
+              </div>
             </table-ordering>
           </th>
           <th class="text-center">
@@ -53,8 +61,10 @@
               [justifyContent]="'center'"
               [ordering]="'solved'"
               (change)="changeOrdering($event)">
-              <i class="mr-50" [data-feather]="'attempt' | iconName"></i>
-              {{ 'ATTEMPTS' | translate }}
+              <div class="align-middle">
+                <i class="mr-50" [data-feather]="'attempt' | iconName"></i>
+                {{ 'ATTEMPTS' | translate }}
+              </div>
             </table-ordering>
           </th>
         </tr>
@@ -64,7 +74,7 @@
         <tr [@fadeInOnEnter] [ngClass]="{
           'bg-light-success': problem.userInfo.hasSolved,
           'bg-light-danger': !problem.userInfo.hasSolved && problem.userInfo.hasAttempted
-        }" *ngFor="let problem of problems; index as i">
+        }" *ngFor="let problem of problems; index as i; trackBy:identify">
           <td>
             {{ problem.id }}
           </td>
