--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,39 +1,54 @@
-<ngb-pagination
-  [collectionSize]="collectionSize"
-  [(page)]="page"
-  [pageSize]="pageSize"
-  [maxSize]="maxSize"
-  [ellipses]="ellipses"
-  [rotate]="rotate"
-  [boundaryLinks]="boundaryLinks"
-  (pageChange)="change($event)"
-  class="d-flex justify-content-center pagination-{{ color }} mt-2">
-  <ng-template ngbPaginationFirst>
+<div class="justify-content-center position-relative">
+  <ngb-pagination
+    [collectionSize]="collectionSize"
+    [(page)]="page"
+    [pageSize]="pageSize"
+    [maxSize]="maxSize"
+    [ellipses]="ellipses"
+    [rotate]="rotate"
+    [boundaryLinks]="boundaryLinks"
+    (pageChange)="change($event)"
+    class="d-flex justify-content-center pagination-{{ color }} mt-2">
+    <ng-template ngbPaginationFirst>
     <span
       [data-feather]="'chevrons-left'"
       [size]="18"
       [class]="'font-weight-bolder'">
     </span>
-  </ng-template>
-  <ng-template ngbPaginationPrevious>
+    </ng-template>
+    <ng-template ngbPaginationPrevious>
     <span
       [data-feather]="'chevron-left'"
       [size]="18"
       [class]="'font-weight-bolder'">
     </span>
-  </ng-template>
-  <ng-template ngbPaginationNext>
+    </ng-template>
+    <ng-template ngbPaginationNext>
     <span
       [data-feather]="'chevron-right'"
       [size]="18"
       [class]="'font-weight-bolder'">
     </span>
-  </ng-template>
-  <ng-template ngbPaginationLast>
+    </ng-template>
+    <ng-template ngbPaginationLast>
     <span
       [data-feather]="'chevrons-right'"
       [size]="18"
       [class]="'font-weight-bolder'">
     </span>
-  </ng-template>  
-</ngb-pagination>
+    </ng-template>
+  </ngb-pagination>
+
+  <div *ngIf="pageOptions?.length > 0" class="position-absolute d-none d-md-block" style="right: 0; top: 0;">
+    <ng-select
+      [clearable]="false"
+      [(ngModel)]="pageSize"
+      (change)="sizeChange($event)">
+      <ng-option *ngFor="let pageOption of pageOptions" [value]="pageOption">
+        {{ pageOption }} / {{ 'Page' | translate }}
+      </ng-option>
+    </ng-select>
+  </div>
+
+  <ng-select-css></ng-select-css>
+</div>
