add enable animations to settings

--- a/src/app/modules/account-settings/system/system.component.html
+++ b/src/app/modules/account-settings/system/system.component.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="sounds">
-      <p class="font-weight-bold font-medium-3 mb-2 mt-1">Sounds</p>
+      <p class="font-weight-bold font-medium-3 mb-1 mt-1">Sounds</p>
 
       <div class="rows">
         <div class="col-6">
@@ -55,6 +55,40 @@
           </ng-select>
         </div>
       </div>
+    </div>
+
+    <div class="animations mt-2">
+      <p class="font-weight-bold font-medium-3 mb-1 mt-1">Enable animations</p>
+      <div class="d-flex">
+        <div class="ml-1 mb-1 custom-control custom-radio">
+          <input
+            type="radio"
+            id="radio-3"
+            name="animation"
+            [(ngModel)]="enableAnimation"
+            (change)="changeEnableAnimation()"
+            [value]="'enable'"
+            class="custom-control-input" />
+          <label class="custom-control-label" for="radio-3">
+            Enable
+          </label>
+        </div>
+
+        <div class="ml-1 mb-1 custom-control custom-radio">
+          <input
+            type="radio"
+            id="radio-4"
+            name="animation"
+            [(ngModel)]="enableAnimation"
+            (change)="changeEnableAnimation()"
+            [value]="'disable'"
+            class="custom-control-input" />
+          <label class="custom-control-label" for="radio-4">
+            Disable
+          </label>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
